--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,43 @@
-img {
-	width: 300px;
+@charset "utf-8"
+
+body{
+	font-family: 'Raleway', sans-serif;
+}
+
+* {
+	margin: 0px;
+	padding: 0px;
+}
+
+#nav {
+	background: red;
+	width:100%;
+	height:60px;
+	Line-height:60px;
+}
+
+#nav h1 {
+	float: left;
+}
+
+#nav h1 a {
+	text-decoration: none;
+	color:white;
+	margin-left: 25px;
+}
+
+#nav ul{
+	float: right;
+}
+
+#nav ul li{
+	text-decoration: none;
+	list-style-type: none;
+	display: inline-block;
+}
+
+#nav ul li a{
+	text-decoration:none;
+	color:white;
+	padding: 25px;
 }
